[package]
name = "fits-webb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = { version = "0.3", features = ["File", "HtmlElement", "HtmlInputElement", "Node"] }
js-sys = "0.3"
gloo-file = "0.2"
fits = { path="../fits" }
tensor = { path="../tensor" }
